# VidChain

./: .gitignore
ORM/: package-lock.json  package.json  tsconfig.json
ORM/src/: index.ts
ORM/src/config/: db.ts
ORM/src/graphql/resolvers/: chunkResolver.ts  index.ts  sessionResolver.ts  sharedLinkResolver.ts  temporarySharedLinkResolver.ts  userResolver.ts  videoResolver.ts
ORM/src/graphql/schema/: typeDefs.ts
ORM/src/grpc/proto/: schema.proto
ORM/src/grpc/services/: userService.ts  videoService.ts
ORM/src/models/: Chunk.ts  Session.ts  SharedLink.ts  TemporarySharedLink.ts  User.ts  Video.ts
ORM/src/services/: user.ts
Rust_server/: Cargo.toml  build.rs
Rust_server/src/: error.rs  main.rs
Rust_server/src/models/: chunk.rs  mod.rs  video.rs
Rust_server/src/proto/: video_service.proto
Rust_server/src/service/: mod.rs  video_service.rs
Rust_server/src/storage/: azure.rs  local.rs  mod.rs
Rust_server/src/video_service/: mod.rs  service.rs  storage.rs
