[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
# Asynchronous runtime
tokio = { version = "1.43.0", features = ["full"] }

# gRPC framework
tonic = "0.12.3"
prost = "0.13.4"

# Azure Blob Storage
azure_storage_blobs = "0.21.0"
azure_core = "0.21.0"

# Environment variable support
dotenv = "0.15.0"

# Unique identifiers
uuid = { version = "1.12.0", features = ["v4"] }

# Cryptographic hash functions (e.g., SHA256)
sha2 = "0.10.8"

# Time and date handling with serde support
chrono = { version = "0.4.39", features = ["serde"] }

# Serialization and deserialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# Asynchronous programming
async-trait = "0.1.85"
futures = "0.3.31"

# Error handling
thiserror = "2.0.11"

# Base64 encoding/decoding
base64 = "0.22.1"

# Logging support
log = "0.4.25"
env_logger = "0.11.6"

# Byte handling utilities
bytes = "1.9.0"

# Asynchronous streaming
tokio-stream = "0.1.17"

# HTTP client for external API calls
reqwest = { version = "0.12.12", features = ["json"] }

[build-dependencies]
# gRPC code generation
tonic-build = "0.12.3"